Fixed alignment on scrolling icons

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ Typography
     font-size: 24px;
 }
 
-.icon9-container a span, span2, span3{
+.icon9-container a span, span2, span3, span4{
     font-family: 'Raleway', sans-serif;
     font-size: 18px;
 }
@@ -461,7 +461,7 @@ Ninth set of icons - Blue Scrolling Text - Bottom Left
     margin-left: 30px;
 }
 
-.icon9-container span2, span3{
+.icon9-container span2, span3, span4{
     position: relative;
     top: 3px;
     left: 90px;
@@ -501,6 +501,18 @@ Ninth set of icons - Blue Scrolling Text - Bottom Left
     }
 }
 
+/* Fixes alignment issue on flickr box */
+@keyframes scrollLeftSpan4{
+    0%{
+        position: relative;
+    }
+
+    100%{
+        position: relative;
+        left: -40px;
+    }
+}
+
 .icon9-container a:hover > span{
     animation-name: scrollLeftSpan;
     animation-duration: 1s;
@@ -517,6 +529,13 @@ Ninth set of icons - Blue Scrolling Text - Bottom Left
 
 .icon9-container a:hover > span3{
     animation-name: scrollLeftSpan3;
+    animation-duration: .8s;
+    animation-fill-mode: forwards;
+    animation-timing-function: linear;
+}
+
+.icon9-container a:hover > span4{
+    animation-name: scrollLeftSpan4;
     animation-duration: .8s;
     animation-fill-mode: forwards;
     animation-timing-function: linear;
